--- a/demo/index.html
+++ b/demo/index.html
@@ -1,19 +1,37 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Kyssmybutton | MotorCortex CODE TYPING</title>
+    <style type="text/css">
+      html,
+      body {
+        font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+        font-size: 14px;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        background-color: #282828;
+      }
+      section {
+        height: 100%;
+        width: 100%;
+        position: absolute;
+      }
+      #clip {
+        background-color: #f7f7f7;
+        width: 90%;
+        height: 90%;
+        margin: auto;
+        margin-top: 2%;
+      }
+    </style>
+  </head>
 
-  <title>MotorCortex CodeTyper plugin demo</title>
-  <meta name="description" content="MotorCortex CodeTyper Plugin playground">
-  <meta name="author" content="KissMyButton PC">
-
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-
-<body>
-    <div id="clip-container"></div>
+  <body>
+    <section><div id="clip"></div></section>
     <script src="./bundle.js"></script>
-</body>
+  </body>
 </html>
