--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Kyssmybutton | MotorCortex CODE TYPING</title>
+    <title>MotorCortex CODE TYPING</title>
     <style type="text/css">
       html,
       body {
